# poly-commit-benches

./: Cargo.toml  README.md
benches/: enc_bench.rs  grid_bench.rs  kzg_libs.rs  multi_proof_bench.rs  pc_bench.rs
src/: lib.rs
src/ark/: enc_bench.rs  fft_bench.rs  grid_bench.rs  kzg_bench.rs  kzg_multiproof_bench.rs  marlin.rs  marlin_bench.rs  mod.rs  pc_impl.rs  streaming_kzg_bench.rs
src/ark/kzg/: data_structures.rs  mod.rs
src/ark/kzg_multiproof/: method1.rs  method2.rs  mod.rs
src/ark/streaming_kzg/: data_structures.rs  mod.rs  tests.rs  time.rs
src/plonk_kzg/: enc_bench.rs  grid_bench.rs  mod.rs
