[package]
name = "poly-commit-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves/", rev = "a82486db1df02cd11f4d705e49119718865add94" }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves/", rev = "a82486db1df02cd11f4d705e49119718865add94" }
ark-bn254 = { git = "https://github.com/arkworks-rs/curves/", rev = "a82486db1df02cd11f4d705e49119718865add94" }
ark-poly = "0.4.0-alpha.5"
ark-ec = "0.4.0-alpha.5"
ark-std = "0.3"
ark-ff = "0.4.0-alpha.5"
ark-serialize = "0.4.0-alpha.5"
rand = "0.8"
thiserror = "1"
dusk-plonk = { git = "https://github.com/Aphoh/plonk", branch = "will-benches", features = ["alloc"] }

[dev-dependencies]
criterion = "0.3"

[features]
asm = ["ark-ff/asm"]

[[bench]]
name = "pc_bench"
harness = false

[[bench]]
name = "enc_bench"
harness = false

