[package]
name = "poly-commit-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std-04 = {package = "ark-std", version = "0.4.0-alpha"}
ark-ec-04 = {package = "ark-ec", version = "0.4.0-alpha.7"}
ark-ff-04 = {package = "ark-ff", version = "0.4.0-alpha.7"}
ark-poly-04 = {package = "ark-poly", version = "0.4.0-alpha.7"}
ark-serialize-04 = {package = "ark-serialize", version = "0.4.0-alpha.7"}
ark-bls12-381-04 = {package = "ark-bls12-381", version = "0.4.0-alpha.2"}
ark-poly-commit = "0.3"
ark-bls12-381 = "0.3"
ark-bn254 = "0.3"
ark-poly = "0.3"
ark-ec = "0.3"
ark-std = "0.3"
ark-ff = "0.3"
ark-serialize = "0.3"
rand = "0.8.5"
thiserror = "1"
dusk-plonk = { git = "https://github.com/Aphoh/plonk", branch = "will-benches", features = ["alloc"] }

[dev-dependencies]
ark-bls12-377 = "0.3"
criterion = "0.4"

[features]
asm = ["ark-ff-04/asm"]
print-trace = ["ark-std-04/print-trace"]

[[bench]]
name = "pc_bench"
harness = false

[[bench]]
name = "multi_proof_bench"
harness = false

[[bench]]
name = "enc_bench"
harness = false

[[bench]]
name = "grid_bench"
harness = false

